# aie_w2_s4

./: .gitignore  Assignment_Introduction_to_LangChain_v0_2_0_and_LCEL_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  Makefile  pyproject.toml
aimakerspace/: pdfloader.py  semantic_chunking.py
aimakerspace/openai_utils/: embedding.py
